# sb

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  alembic.ini  docker-compose.yml  pyproject.toml
SmartGym/: app.json  package-lock.json  package.json
SmartGym/android/: settings.gradle
SmartGym/android/app/: build.gradle
SmartGym/android/app/src/main/java/com/smartgym/: MainActivity.kt  MainApplication.kt
SmartGym/ios/: Podfile
SmartGym/ios/SmartGym/: AppDelegate.swift  Info.plist
SmartGym/ios/SmartGym.xcodeproj/: project.pbxproj
SmartGym/ios/SmartGym.xcworkspace/: contents.xcworkspacedata
SmartGym/src/api/: client.ts
SmartGym/src/hooks/: useLiveStream.ts
SmartGym/src/navigation/: AppNavigator.tsx
SmartGym/src/screens/: ChatScreen.tsx  HomeScreen.tsx  LiveCoachingScreen.tsx  ProfileScreen.tsx  QRScanScreen.tsx  StatsScreen.tsx
SmartGym/src/store/: session.ts
docs/: ad_script.md  ad_script_short.md  backlog.md  business_plan_prompt.md  progress.md  runbook.md  tasks.md
docs/gyms/: gym_contacts.md
infrastructure/nginx/: nginx.conf
mobile/: package.json
mobile/src/api/: client.ts
mobile/src/components/: VoiceInputButton.tsx
mobile/src/hooks/: useLiveStream.ts  useSpeechToText.ts
mobile/src/navigation/: AppNavigator.tsx
mobile/src/screens/: HistoryScreen.tsx  LiveCoachingScreen.tsx  OnboardingScreen.tsx  QRScanScreen.tsx  ReplayScreen.tsx
mobile/src/store/: session.ts
scripts/: register_camera.py  register_person.py  seed_gym_knowledge.py  setup_db.py  start_services.sh  stop_services.sh  visualize_video.py
services/api/: Dockerfile  pyproject.toml
services/api/src/api/: auth.py  dependencies.py  main.py  websocket_manager.py
services/api/src/api/routers/: chat.py  conversations.py  persons.py  sessions.py  tracks.py  websocket.py
services/api/src/api/schemas/: __init__.py
services/exercise/: Dockerfile  pyproject.toml
services/exercise/data/: exercises.yaml
services/exercise/src/exercise/: classifier.py  config.py  exercise_registry.py  form_analyzer.py  keypoint_utils.py  main.py  pipeline.py  rep_counter.py  rest_timer.py
services/exercise/tests/: test_exercise.py
services/guidance/: Dockerfile  pyproject.toml
services/guidance/src/guidance/: config.py  conversation_manager.py  form_alert_handler.py  llm_client.py  main.py  notification_dispatcher.py  prompt_builder.py  rep_milestone_handler.py  rest_timer_handler.py  session_onboarding.py  set_complete_handler.py  tool_definitions.py  tool_executor.py
services/guidance/src/guidance/providers/: __init__.py  anthropic.py  base.py  gemini.py
services/ingestion/: Dockerfile  pyproject.toml
services/ingestion/src/ingestion/: camera_reader.py  config.py  frame_publisher.py  main.py
services/ingestion/tests/: test_camera_reader.py
services/perception/: pyproject.toml
services/perception/src/perception/: config.py  detector.py  main.py  pipeline.py  reid_extractor.py  tracker.py
services/reid/: Dockerfile  pyproject.toml
services/reid/src/reid/: config.py  gallery_manager.py  identity_resolver.py  main.py  matcher.py
services/worker/: Dockerfile  pyproject.toml
services/worker/src/worker/: app.py  config.py
services/worker/src/worker/tasks/: video_clip.py
shared/: pyproject.toml
shared/src/gym_shared/: logging.py  redis_client.py  settings.py
shared/src/gym_shared/db/: models.py  session.py
shared/src/gym_shared/db/migrations/: env.py
shared/src/gym_shared/db/migrations/versions/: a1b2c3d4e5f6_phase2_person_session_columns.py  d60ecb05d003_initial_schema_phase1.py
shared/src/gym_shared/events/: publisher.py  schemas.py
