[project]
name = "gym-api"
version = "0.1.0"
description = "API gateway — FastAPI REST + WebSocket endpoints"
requires-python = ">=3.11"
dependencies = [
    "gym-shared",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "minio>=7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.uv.sources]
gym-shared = { workspace = true }
