[project]
name = "gym-exercise"
version = "0.1.0"
description = "Exercise analysis service — rep counting, form analysis, exercise classification"
requires-python = ">=3.11"
dependencies = [
    "gym-shared",
    "numpy>=1.26",
    "scipy>=1.13",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exercise"]

[tool.uv.sources]
gym-shared = { workspace = true }
