[project]
name = "gym-ingestion"
version = "0.1.0"
description = "Video ingestion service — reads RTSP streams and publishes frames to Redis Streams"
requires-python = ">=3.11"
dependencies = [
    "gym-shared",
    "av>=12.0",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]

[tool.uv.sources]
gym-shared = { workspace = true }
