[project]
name = "gym-perception"
version = "0.1.0"
description = "Perception pipeline — YOLO detection, ByteTrack tracking, OSNet ReID feature extraction"
requires-python = ">=3.11"
dependencies = [
    "gym-shared",
    "ultralytics>=8.3",
    "torchreid>=0.2.1",
    "torch>=2.3",
    "torchvision>=0.18",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
    "Pillow>=10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/perception"]
