[project]
name = "gym-reid"
version = "0.1.0"
description = "Cross-camera person re-identification and identity resolution service"
requires-python = ">=3.11"
dependencies = [
    "gym-shared",
    "numpy>=1.26",
    "scipy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reid"]
