[project]
name = "gym-worker"
version = "0.1.0"
description = "Celery async worker — video clip saving, push notifications, background jobs"
requires-python = ">=3.11"
dependencies = [
    "gym-shared",
    "celery[redis]>=5.4",
    "av>=12.0",
    "minio>=7.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
